--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "require": {
         "guzzlehttp/guzzle": "~6.0",
-        "lcobucci/jwt": "~4.0"
+        "lcobucci/jwt": "^3.3.1"
     },
     "autoload": {
         "psr-4": {
